Improved batch upload error reporting.

--- a/src/main/resources/bundles/batchUpload_en.properties
+++ b/src/main/resources/bundles/batchUpload_en.properties
@@ -19,31 +19,33 @@ batchUpload.error.DataTransferErr=An error occurred locating the batch data for 
 
 batchUpload.parseError.invalidDynPropSpec={0}: Invalid dynamic property specification: {1}
 
-batchUpload.verifyError.repeatIndividualID=Individual with ID {0} cannot be defined more than once
-batchUpload.verifyError.repeatEncounter=Encounter with ID {0} cannot be defined more than once
+batchUpload.verifyError.repeatIndividualID=Individual {0} cannot be defined more than once
+batchUpload.verifyError.existsIndividualID=Individual with ID {0} already exists in the database
+batchUpload.verifyError.repeatEncounter=Encounter {0} cannot be defined more than once
 batchUpload.verifyError.individualNoEncounter=Individual {0} has no encounters
-batchUpload.verifyError.encounterUnknownIndividual=Encounter refers to unknown IndividualID: {0}
-batchUpload.verifyError.encounterInvalidSex=Encounter specifies an invalid sex: {0}
-batchUpload.verifyError.encounterInvalidTaxonomy=Encounter specifies an invalid taxonomy: {0}
-batchUpload.verifyError.encounterInvalidLifeStage=Encounter specifies an invalid life stage: {0}
-batchUpload.verifyError.encounterInvalidLocation=Encounter specifies an invalid location: {0}
-batchUpload.verifyError.encounterInvalidSamplingProtocol=Encounter specifies an invalid measurement protocol: {0}
-batchUpload.verifyError.measurementNoEncounter=Measurement is not linked to an encounter
+batchUpload.verifyError.encounterUnknownIndividual=Encounter {0} refers to unknown Individual: {1}
+batchUpload.verifyError.encounterInvalidSex=Encounter {0} specifies an invalid sex: {1}
+batchUpload.verifyError.encounterInvalidTaxonomy=Encounter {0} specifies an invalid taxonomy: {1}
+batchUpload.verifyError.encounterInvalidLifeStage=Encounter {0} specifies an invalid life stage: {1}
+batchUpload.verifyError.encounterNoLocation=Encounter {0} must specify a valid location
+batchUpload.verifyError.encounterInvalidLocation=Encounter {0} specifies an invalid location: {1}
+batchUpload.verifyError.encounterInvalidLocationPermission=Insufficient permission to import data for location: {0}
+batchUpload.verifyError.encounterInvalidSamplingProtocol=Encounter {0} specifies an invalid measurement protocol: {1}
+batchUpload.verifyError.measurementNoEncounter=Measurements found which are not linked to encounters
 batchUpload.verifyError.measurementInvalidEncounter=Measurement is linked to an unknown encounter: {0}
 batchUpload.verifyError.measurementInvalidType=Measurement type is not supported: {0}
 batchUpload.verifyError.measurementInvalidUnits=Measurement units are not supported: {0}
 batchUpload.verifyError.measurementInvalidProtocol=Measurement protocol is not supported: {0}
 batchUpload.verifyError.mediaNoEncounter=Media item is not linked to an encounter
 batchUpload.verifyError.mediaInvalidEncounter=Media item is linked to an unknown encounter: {0}
-batchUpload.verifyError.mediaDuplicateName=Media filename has already been used: {0}
-batchUpload.verifyError.mediaInvalidName=Media type is not supported: {0}
-batchUpload.verifyError.mediaNoURL=Media item has no URL specified
-batchUpload.verifyError.mediaInvalidURL=Media item has an invalid URL: {0}
-batchUpload.verifyError.mediaInvalidKeyword=Media item has an invalid keyword: {0}
+batchUpload.verifyError.mediaDuplicateFile=Media filename has already been used: {0}
+batchUpload.verifyError.mediaInvalidType=Media type is not supported: {0}
+batchUpload.verifyError.mediaNoURL=Media items found with no URL specified
+batchUpload.verifyError.mediaInvalidURL=Media item found with invalid URL: {0}
+batchUpload.verifyError.mediaInvalidKeyword=Media keyword not supported: {0}
 batchUpload.verifyError.sampleNoEncounter=Sample is not linked to an encounter: {0}
 batchUpload.verifyError.sampleInvalidEncounter=Sample is linked to an unknown encounter: {0}
 batchUpload.verifyError.sampleInvalidTissueType=Sample specifies an invalid tissue type: {0}
-batchUpload.verifyError.existsIndividualID=Individual with ID {0} already exists
 
 batchUpload.processError.plugin.loadFailed=Failed to load batch processing plugin: {0}
 batchUpload.processError.plugin.preProcessError=Data pre-processing error in plugin (see server logs for details)
@@ -70,12 +72,10 @@ gui.warnings.text=The following (non-critical) issues were found while trying to
 # Resources for batch upload main JSP page.
 # -----------------------------------------
 gui.title=Batch Upload
-
-gui.overview=Batch upload allows you to upload large quantities of new data in a short number of steps, making it very useful to import large data sets. (It does not currently support modifying existing data.) At minimum it imports from two data files, one for individuals, the other for encounters, but it can also import associated photographs/videos and tissue samples. It is recommended to test the functionality with a small amount of data initially to understand how it operates, and to verify that it performs as expected.
+gui.overview=Batch upload allows you to upload large quantities of new data in a short number of steps, making it very useful to import large data sets. It doesn't support modifying existing data, only importing new data. At minimum it imports from two data files, one for individuals, the other for encounters, but it can also import associated photographs/videos and tissue samples. It is recommended to test the functionality with a small amount of data initially to understand how it operates, and to verify that it performs as expected.<br /><strong>Note:</strong> you must have permission for the region into which you are importing data.
 
 gui.step1.title=Step 1
-
-gui.step1.text=Download the required data file templates using the links below. Data files are written in comma-separated variable (CSV) format, and the each template simply contains column headers for each data attribute. At minimum you will need to supply data for <span class="dataType">individuals</span> and <span class="dataType">encounters</span>.
+gui.step1.text=Download the required templates using the links below. Data files are in comma-separated variable (CSV) format, and each template contains column headers for each data attribute. At minimum you will need to supply data for <span class="dataType">individuals</span> and <span class="dataType">encounters</span>.
 
 gui.step1.template.ind=CSV template for individuals (required)
 gui.step1.template.enc=CSV template for encounters (required)
@@ -84,12 +84,12 @@ gui.step1.template.med=CSV template for media (optional)
 gui.step1.template.sam=CSV template for samples (optional)
 
 gui.step2.title=Step 2
+gui.step2.text=Add your data to the templates. This is the biggest step, where you must meet all data requirements outlined below. Examine current website data to ensure you choose appropriate values. Some data are mandatory, and have restrictions on possible values:
+gui.step2.text2=CSV files can be output from most spreadsheet applications, but you should ensure date columns are formatted correctly. Also, if your text has any irregular characters (e.g. accented characters) be careful to make sure your spreadsheet outputs correctly in UTF-8 format.<ul><li>LibreOffice Calc supports UTF-8 CSV files.</li><li>OpenOffice Calc supports UTF-8 CSV files.</li><li>Google Spreadsheet supports UTF-8 CSV files <em>(File / Download as / Comma Separated Values)</em>.</li><li>Microsoft Excel does <strong>not</strong> support UTF-8 CSV files.</li></ul>
 
-gui.step2.text=Add your data to the templates. This is the biggest step in the process, where you must meet all the data requirements. Examine current website data to ensure you choose appropriate values for your data. Some data columns are mandatory, and have restrictions on possible values:
-
-gui.step2.list0=CSV files should be in standard UTF-8 text encoding.
+gui.step2.list0=CSV files should be in UTF-8 text encoding (standard for many text editors).
 gui.step2.list1=Entire data columns may be removed, provided they are not mandatory columns (see below).
-gui.step2.list2=Columns header row should not be removed, nor the headers changed, as they denote how to interpret the data.
+gui.step2.list2=Columns headers should not be removed/changed, as they are required to correctly parse the data.
 gui.step2.list3=Mandatory data for <span class="dataType">Individual</span>: <span class="colHeader">Individual ID</span>.
 gui.step2.list4=Mandatory data for <span class="dataType">Encounter</span>: <span class="colHeader">Encounter ID</span>, <span class="colHeader">Date</span>, <span class="colHeader">Sex</span>, <span class="colHeader">Location ID</span>.
 gui.step2.list5=Mandatory data for <span class="dataType">Measurements</span> (if uploaded): all items.
@@ -97,11 +97,13 @@ gui.step2.list6=Mandatory data for <span class="dataType">Media</span> (if uploa
 gui.step2.list7=Mandatory data for <span class="dataType">Sample</span> (if uploaded): <span class="colHeader">Encounter ID</span> (integer), <span class="colHeader">Tissue Type</span>, <span class="colHeader">Sample ID</span>.
 gui.step2.list8=All dates must be entered in generic format <span class="dateFormat">YYYY-MM-DD</span>; this helps to avoid errors due to regional date styles.<br/><span class="example">(e.g.&nbsp;&quot;2013-02-28&quot; for 28th February 2013)</span>
 gui.step2.list9=Times must be entered in <span class="dateFormat">HH:mm</span> format representing local time (for the encounter), using 24-hour clock.<br/><span class="example">(e.g.&nbsp;&quot;15:45&quot;)</span>
-gui.step2.list10=Numerical data should contain the raw number (i.e. no units).
-gui.step2.list11=Latitude/longitude must be entered as WGS-84 decimal format.
-gui.step2.list12=All entries containing a comma must be quoted <span class="example">(e.g.&nbsp;&quot;Paris, Texas&quot;)</span>.
-gui.step2.list13=Entries containing lists of strings must include an initial delimiter character.<br/><span class="example">(e.g.&nbsp;&quot;|One|Two|Three&quot;)</span>
-gui.step2.list14=Dynamic Properties are entered as a normal list, but use a <span class="dpFormat">key=value</span> format for each entry.<br/><span class="example">(e.g.&nbsp;&quot;|Item1=One|Item2=Two|Item3=Three&quot;)</span>
+gui.step2.list10=<span class="colHeader">Encounter ID</span> is only used to associate parsed data &amp; will not be seen on the website.
+gui.step2.list11=Numerical data should contain the raw number (i.e. no units).
+gui.step2.list12=Latitude/longitude must be entered as WGS-84 decimal format.
+gui.step2.list13=All entries containing a comma must be quoted <span class="example">(e.g.&nbsp;&quot;Paris, Texas&quot;)</span>.
+gui.step2.list14=Entries containing lists of strings must include an initial delimiter character.<br/><span class="example">(e.g.&nbsp;&quot;|One|Two|Three&quot;)</span>
+gui.step2.list15=Dynamic Properties are entered as a normal list, but use a <span class="dpFormat">key=value</span> format for each entry.<br/><span class="example">(e.g.&nbsp;&quot;|Item1=One|Item2=Two|Item3=Three&quot;)</span>
+gui.step2.list16=Media files may be no larger than {0,number,integer} megabytes.
 
 gui.step2.enums.list0=<span class="dataType">Individual</span> <span class="colHeader">Sex</span> data must be one of: <span class="enum">{0}</span>
 gui.step2.enums.list1=<span class="dataType">Encounter</span> <span class="colHeader">Sex</span> data must be one of: <span class="enum">{0}</span>
@@ -118,13 +120,11 @@ gui.step2.enums.list11=<span class="dataType">Media</span> <span class="colHeade
 gui.step2.enums.list12=<span class="dataType">Sample</span> <span class="colHeader">Tissue Type</span> data must be one of: <span class="enum">{0}</span>
 gui.step2.enums.list13=<span class="dataType">Sample</span> <span class="colHeader">Preservation Method</span> data must be one of: <span class="enum">{0}</span>
 
-gui.step2.text2=CSV files can be output from most spreadsheet applications, but you should ensure date columns are formatted correctly. Also, if your text has any irregular characters (e.g. accented characters) be careful to make sure your spreadsheet outputs correctly in UTF-8 format.<ul><li>LibreOffice Calc supports UTF-8 CSV files.</li><li>OpenOffice Calc supports UTF-8 CSV files.</li><li>Google Spreadsheet supports UTF-8 CSV files <em>(File / Download as / Comma Separated Values)</em>.</li><li>Microsoft Excel does <strong>not</strong> support UTF-8 CSV files.</li></ul>
-
 gui.step2.pluginText=MantaMatcher also has a specialized algorithm to analyze the ventral spot patterns of mantas. It uses &quot;candidate region&quot; (CR) photos for this, which are carefully aligned & cropped versions of identification (ID) photos. These are also supported during batch upload in the <span class="dataType">Media</span> data file, and must have a filename exactly as the related ID photo, but with a &quot;_CR&quot; suffix. For example, for an ID photo specified as <span class="fileName">http://myserver.org/batchdata/2013-06-15-Manta1.jpg</span>, the CR photo must be called <span class="fileName">http://myserver.org/batchdata/2013-06-15-Manta1_CR.jpg</span>.
 
 gui.step3.title=Step 3
-
 gui.step3.text=Submit the data files to the server for processing:
+gui.step3.text2=Please read the last two steps before clicking the <span class="buttonDesc">Upload</span> button.
 
 gui.step3.form.text.ind=CSV file containing <span class="dataType">individual</span> data (required):
 gui.step3.form.text.enc=CSV file containing <span class="dataType">encounter</span> data (required):
@@ -134,15 +134,11 @@ gui.step3.form.text.sam=CSV file containing <span class="dataType">sample</span>
 gui.step3.form.submit=Upload
 gui.step3.form.reset=Reset
 
-gui.step3.text2=Please read the remaining two steps before clicking the <span class="buttonDesc">Upload</span> button.
-
 gui.step4.title=Step 4
-
 gui.step4.text=Once uploaded your data is checked, and if problems are found you will be returned to this page and notified. If accepted, you will continue to a confirmation page.
 
 gui.step5.title=Step 5
-
-gui.step5.text=The confirmation page shows a brief data summary to show what will be imported, and provides an option to continue or abort. On continuation you will be taken to a progress summary page; you should remain on this page in your browser until the process is completed, to avoid interrupting the process.
+gui.step5.text=The confirmation page shows a brief data summary to show what will be imported, and provides an option to continue or abort. You are strongly advised to carefully check the details on the summary page, to ensure they meet your expectations. On continuation you will be taken to a progress summary page; you should remain on this page in your browser until the process is completed, to avoid interrupting the process.
 
 
 # -------------------------------------------------
@@ -150,7 +146,7 @@ gui.step5.text=The confirmation page shows a brief data summary to show what wil
 # -------------------------------------------------
 gui.summary.title=Batch Upload Confirmation
 
-gui.summary.overview=The batch data you submitted has been pre-processed and found to pass the basic data validation/integrity checks. Please examine the summary of your batch data below to ensure the correct data is to be imported. If you are satisfied, click the confirm button to continue with the data import.
+gui.summary.overview=The batch data you submitted has been pre-processed and found to pass the basic data validation/integrity checks. Please examine the summary of your data before proceeding. If you are satisfied, click the confirm button to continue with the data import.
 
 gui.summary.label.ind=Number of individuals:
 gui.summary.label.enc=Number of encounters:
