--- a/src/main/resources/org/ecocean/batch/i18n/BatchParser.properties
+++ b/src/main/resources/org/ecocean/batch/i18n/BatchParser.properties
@@ -269,9 +269,9 @@ format.sample.datasetName=string
 #================
 err.InvalidTitle={0}: Invalid title column: "{1}"
 err.InvalidFieldCount={0}: Invalid number of data fields for line {1} (found:{2}, required:{3})
-err.RequiredValue={0}: Value required for column: {1}
-err.InvalidValue={0}: Invalid value: {1}: {2}
-err.InvalidFormat={0}: Invalid format for column "{2}": {2}
-err.MissingFormat=Missing format for column: "{0}"
+err.RequiredValue={0} found with no "{1}" value
+err.InvalidValue={0} found with invalid "{1}" value: {2}
+err.InvalidFormat=Invalid format found for column "{1}"
+err.MissingFormat=Missing format found for column "{0}"
 err.WritingFile=Error writing file: {0}
-err.NoData={0}: No data supplied
+err.NoData={0} found with no data
