Improvements to batch upload module.
	Factored out servlet method delegation framework to new class (DispatchServlet).
	Assigned common keys to forwarding pages in BatchUpload servlet to improve consistency.
	Modified JSP pages relating to BatchUpload servlet keyed pages.
	Removed minor cruft from above code.
	Fixed minor bug in displaying max media upload size.

--- a/src/main/resources/bundles/batchUpload_en.properties
+++ b/src/main/resources/bundles/batchUpload_en.properties
@@ -103,7 +103,8 @@ gui.step2.list12=Latitude/longitude must be entered as WGS-84 decimal format.
 gui.step2.list13=All entries containing a comma must be quoted <span class="example">(e.g.&nbsp;&quot;Paris, Texas&quot;)</span>.
 gui.step2.list14=Entries containing lists of strings must include an initial delimiter character.<br/><span class="example">(e.g.&nbsp;&quot;|One|Two|Three&quot;)</span>
 gui.step2.list15=Dynamic Properties are entered as a normal list, but use a <span class="dpFormat">key=value</span> format for each entry.<br/><span class="example">(e.g.&nbsp;&quot;|Item1=One|Item2=Two|Item3=Three&quot;)</span>
-gui.step2.list16=Media files may be no larger than {0,number,integer} megabytes.
+
+gui.step2.maxMediaSize=No media file may be larger than {0,number,integer}MB in size.
 
 gui.step2.enums.list0=<span class="dataType">Individual</span> <span class="colHeader">Sex</span> data must be one of: <span class="enum">{0}</span>
 gui.step2.enums.list1=<span class="dataType">Encounter</span> <span class="colHeader">Sex</span> data must be one of: <span class="enum">{0}</span>
