Updates to batch upload for inclusion of pigmentation (patterning code).

--- a/src/main/resources/org/ecocean/batch/i18n/BatchParser.properties
+++ b/src/main/resources/org/ecocean/batch/i18n/BatchParser.properties
@@ -86,7 +86,6 @@ format.individual.dataFiles=string+
 #===========
 # ENCOUNTER
 #===========
-# Darwin Core fields.
 column.encounter.eventID=Encounter ID
 column.encounter.individualID=Individual ID
 column.encounter.date=Date
@@ -105,6 +104,7 @@ column.encounter.lifeStage=Life Stage
 column.encounter.releaseDate=Release Date
 column.encounter.size=Size (m)
 column.encounter.sizeGuess=Size Guess (m)
+column.encounter.patterningCode=Pigmentation
 column.encounter.distinguishingScar=Distinguishing Scars
 column.encounter.otherCatalogNumbers=Other Catalog Numbers
 column.encounter.occurrenceID=Occurrence ID
@@ -113,7 +113,6 @@ column.encounter.recordedBy=Recorded By
 column.encounter.behavior=Behaviour
 column.encounter.dynamicProperties=Dynamic Properties
 column.encounter.identificationRemarks=ID Remarks
-# Other (non-DC) fields.
 column.encounter.researcherComments=Researcher Comments
 column.encounter.informOthers=Emails to Inform
 column.encounter.submitterOrganization=Submitter Organization
@@ -154,6 +153,7 @@ format.encounter.lifeStage=string
 format.encounter.releaseDate=date
 format.encounter.size=double
 format.encounter.sizeGuess=string
+format.encounter.patterningCode=string
 format.encounter.distinguishingScar=string
 format.encounter.otherCatalogNumbers=string
 format.encounter.occurrenceID=string
